+ Added MatchInfo details to MatchInfoBar component + Fixed issue where "vs" arrow in MatchInfoBar was not centered if the text was too long or too short + Added new MatchInfoContext for use in MatchInfoModal + The minimum width for the MatchInfoModal body is changed from 600px to 660px to prevent distortion of background. + MatchInfoBars are now dynamically added to the MatchInfoModal component. + Added an index.js for the hooks folder - Removed unnecessary imports and comments in MatchSettingsPage + Refactored retrieval of gameClassMST to implement useFetch custom hook

--- a/src/components/MatchInfoBar.module.css
+++ b/src/components/MatchInfoBar.module.css
@@ -1,3 +1,22 @@
+.noselect-container {
+    display: inline-flex;
+    flex-direction: row;
+
+    justify-content: space-around;
+    align-items: center;
+
+
+    width: 88%;
+    height: 70px;
+
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgb(245, 245, 245) 98%, rgba(194,194,194,1) 100%);
+
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px 1px rgb(173, 173, 173);
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
 .container {
     display: inline-flex;
     flex-direction: row;
@@ -7,10 +26,35 @@
 
 
     width: 88%;
-    height: 90px;
+    height: 70px;
 
     background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgb(245, 245, 245) 98%, rgba(194,194,194,1) 100%);
 
     border-radius: 20px;
     box-shadow: 0px 0px 5px 1px rgb(173, 173, 173);
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
+.container:hover {
+    box-shadow: 0px 0px 5px 1.5px rgb(132, 132, 132);
+}
+
+.container:active {
+    box-shadow: 0px 0px 5px 5px rgb(191, 191, 191);
+}
+
+.image {
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
+.team-name {
+    font-size: 2em;
+    width: 387.5px;
+    text-align: center;
+}
+
+.stadium-name {
+    font-size: 1.25em;
 }
